@startuml

class Item
{
    +String name
    +String serialNumber
    +double value

    +getName(): String
    +getSerialNumber(): String
    +getValue(): double
    +toString(): String
}

class InventoryManagementApplication
{
    +start(Stage)
    +main(String[])
    'calls launch() which calls start
    'shows the stage
}

class InventoryManagementPageController
{
    -List<Item> itemList
    -List<Item> searchedItemList

    -addItem(ActionEvent)
    -deleteItem(ActionEvent)
    -deleteAll(ActionEvent)
    -editName(ActionEvent)
    -editSerialNumber(ActionEvent)
    -editValue(ActionEvent)
    -loadFile(ActionEvent)
    -updateGui(List<Item>)
    -saveFile(ActionEvent)
    -search(ActionEvent)
    -reset(ActionEvent)
    -radioButtonChanged(ActionEvent)
    +initialize()
}

class ManagementHelper
{
    +nameValid(String): boolean
    +valueValid(String): boolean
    +serialNumValid(String): boolean
    +search(List<Item>, String): List<Item>
    +sortByName(List<Item>): List<Item>
    +sortByValue(List<Item>): List<Item>
    +sortBySerial(List<Item>): List<Item>
    +deleteAllItemsFunction(List<Item>):List<Item>
    +deleteAllItemsSearchFunction(List<Item>, List<Item>): List<Item>
    +deleteItemFunction(Item, List<Item>): List<Item>
    +addItemFunction(List<Item>, String, String, double): List<Item>
    +editNameFunction(List<Item>, Item, String): List<Item>
    +editSerialNumberFunction(List<Item>, Item, String): List<Item>
    +editValueFunction(List<Item>, Item, double): List<Item>
}

class FileParse
{
    +loadFile(String): ArrayList<Item>
    -convertFileToList(List<String>): ArrayList<Item>
}

class FileSave
{
    +saveFile(String, List<Item>)
}

InventoryManagementApplication -- InventoryManagementPageController
InventoryManagementPageController --* Item
InventoryManagementPageController -- ManagementHelper
InventoryManagementPageController -- FileSave
InventoryManagementPageController -- FileParse

@enduml